# imu-bridge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cargow
.cargo/: config.toml
src/: board.rs  config.rs  error.rs  lib.rs  network.rs
src/app/: mod.rs  state.rs  tasks.rs
src/domain/: mod.rs  sensor_reading.rs
src/sensor/: bmi088.rs  full_scale.rs  icm42688p.rs  icm45686.rs  imu.rs  ism330dlc.rs  mod.rs
src/telemetry/: binary.rs  text.rs
tools/imu-logger/: Cargo.toml
tools/imu-logger/.cargo/: config.toml
tools/imu-logger/src/: main.rs
