[package]
edition = "2024"
name = "imu-bridge"
version = "0.1.0"

[[bin]]
name = "imu-bridge"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-embedded-hal = { version = "0.6.0", features = ["defmt", "time"] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-net = { version = "0.8.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }
getrandom = { version = "0.2.16", features = ["custom"] }
heapless = { version = "0.9.2", default-features = false, features = ["defmt", "embedded-io-v0.7"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
static_cell = "2.1.1"
# for more networking protocol support see https://crates.io/crates/edge-net
smoltcp = { version = "0.13.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
zenoh-nostd = { git = "https://github.com/ZettaScaleLabs/zenoh-nostd", features = ["defmt"] }
zenoh-embassy = { git = "https://github.com/ZettaScaleLabs/zenoh-nostd" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
